--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
         "initializer_list": "cpp",
         "string_view": "cpp",
         "utility": "cpp",
-        "string": "cpp"
+        "string": "cpp",
+        "iosfwd": "cpp",
+        "*.tcc": "cpp"
     }
 }
